Changelog
=========

2.2a1 (unreleased)
------------------

- Moved Products.CMFFormController dependency
  from Products.CMFPlone to Products.ATContentTypes (PLIP #13770)
  [ale-rt]

- Moved portal_factory and portal_metadata from Products.CMFPlone
  to Products.ATContentTypes. (PLIP #13770)
  [ale-rt]

- Remove test_discussion test which tests the old discussion (pre Plone 4.1)
  tool.
  [timo]

- Add 'content' profile which adds demo/test content.
  This used to be in CMFPlone and is still used by PloneTestCase
  in Plone 5.
  [davisagli]

- Update ICONMAP (.gif to .png).
  [mathias.leimgruber]

- Move content type profile definitions from Products.CMFPlone into here.
  (Merge of PLIP 12344)
  [davisagli et al.]

- Remove the presentation mode setting from documents.
  If the feature is still desired, use the plone.app.s5slideshow
  addon.
  [davisagli]

- Removed backwards compatibility stub Products.ATReferenceBrowserWidget
  [tomgross]
  
- Don't throw a traceback if atct_topic_view is called on a non topic.
  Redirect to the default view of context instead
  [tomgross]

- Move ATContent types views in there instead of CMFPlone
  [encolpe]

2.1.12 (2013-03-05)
-------------------

- Fix missing references on copy of (old-style) Collection path
  criterion and relatedItems on stock content using the schema
  flag keepReferencesOnCopy.  Refs: https://dev.plone.org/ticket/9919
  [seanupton]


2.1.11 (2013-01-13)
-------------------

- Fix deprecated import from Archetypes: use atapi instead of public
  [toutpt]

2.1.10 (2012-12-09)
-------------------

- change string ownership to creators as it makes more sense
  refs http://dev.plone.org/ticket/8725
  [maartenkling]

- Make sure ATTopic.queryCatalog cannot be published. This fixes
  http://plone.org/products/plone/security/advisories/20121106/14
  [davisagli]

2.1.9 (2012-10-11)
------------------

- Silence false security warning during startup complaining about
  `ATTopic.setText`.
  [hannosch]
